[package]
name = "graph_jpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "graph_jpr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
numpy = "0.20.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }